--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draco AI</title>
+    <title>Chat Script Fetcher</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,28 +19,23 @@
         }
 
         .chat-container {
-            display: flex;
-            flex-direction: column;
             background-color: #212121;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 400px;
             max-width: 100%;
-            height: 90vh;
             padding: 20px;
             box-sizing: border-box;
         }
 
         .chat-box {
-            flex: 1;
+            height: 300px;
             overflow-y: auto;
             border: 1px solid #333;
             border-radius: 10px;
             padding: 10px;
             margin-bottom: 10px;
             background-color: #1a1a1a;
-            scrollbar-width: thin;
-            scrollbar-color: #212121 #1a1a1a;
         }
 
         .chat-box p {
@@ -126,6 +121,10 @@
             <input type="text" id="chat-input" placeholder="Ask for a script...">
             <button onclick="sendMessage()">Send</button>
         </div>
+        <div class="script-panel" id="script-panel">
+            <pre id="script-content"></pre>
+            <button onclick="copyToClipboard()">Copy</button>
+        </div>
     </div>
 
     <script>
@@ -208,58 +207,58 @@ local function createBox(target)
     box.Thickness = 2
     box.Transparency = 1
     
-    local function updateBox()
-        if target and target.Character and target.Character:FindFirstChild("Head") then
-            local head = target.Character.Head
-            local headPos, onScreen = workspace.CurrentCamera:WorldToViewportPoint(head.Position)
-            if onScreen then
-                box.Size = Vector2.new(2000 / headPos.Z, 3000 / headPos.Z)
-                box.Position = Vector2.new(headPos.X - box.Size.X / 2, headPos.Y - box.Size.Y / 2)
-            else
-                box.Visible = false
-            end
-        else
-            box.Visible = false
-        end
-    end
+    local function updateBox() {
+        if (target && target.Character && target.Character.FindFirstChild("Head")) {
+            const head = target.Character.Head;
+            const headPos, onScreen = workspace.CurrentCamera.WorldToViewportPoint(head.Position);
+            if (onScreen) {
+                box.Size = Vector2.new(2000 / headPos.Z, 3000 / headPos.Z);
+                box.Position = Vector2.new(headPos.X - box.Size.X / 2, headPos.Y - box.Size.Y / 2);
+            } else {
+                box.Visible = false;
+            }
+        } else {
+            box.Visible = false;
+        }
+    }
     
-    game:GetService("RunService").RenderStepped:Connect(updateBox)
-end
+    game.GetService("RunService").RenderStepped.Connect(updateBox);
+}
 
-for (_, player in pairs(game.Players:GetPlayers())) do
+for (const player of game.Players.GetPlayers()) {
     if (player !== game.Players.LocalPlayer) {
         createBox(player);
     }
 }
 
-game.Players.PlayerAdded:Connect(function(player) {
+game.Players.PlayerAdded.Connect(function(player) {
     createBox(player);
 });
 `,
             "name": `
 -- Name ESP Script
 local function createNameTag(target)
-    local bill = Instance.new("BillboardGui", target.Character.Head)
-    bill.Size = UDim2.new(1, 0, 1, 0)
-    bill.Adornee = target.Character.Head
-    bill.AlwaysOnTop = true
+    const bill = Instance.new("BillboardGui", target.Character.Head);
+    bill.Size = UDim2.new(1, 0, 1, 0);
+    bill.Adornee = target.Character.Head;
+    bill.AlwaysOnTop = true;
 
-    local nameTag = Instance.new("TextLabel", bill)
-    nameTag.Size = UDim2.new(1, 0, 1, 0)
-    nameTag.Text = target.Name
-    nameTag.BackgroundTransparency = 1
-    nameTag.TextColor3 = Color3.fromRGB(255, 0, 0)
-    nameTag.TextStrokeTransparency = 0
-end
+    const nameTag = Instance.new("TextLabel", bill);
+    nameTag.Size = UDim2.new(1, 0, 1, 0);
+    nameTag.Text = target.Name;
+    nameTag.BackgroundTransparency = 1;
+    nameTag.TextColor3 = Color3.fromRGB(255, 0, 0);
+    nameTag.TextStrokeTransparency = 0;
+}
 
-for (_, player in pairs(game.Players.GetPlayers())) do
+for (const player of game.Players.GetPlayers()) {
     if (player !== game.Players.LocalPlayer) {
         createNameTag(player);
     }
 }
 
-game.Players.PlayerAdded:Connect(function(player) {
-    player.CharacterAdded:Connect(function() {
+game.Players.PlayerAdded.Connect(function(player) {
+    player.CharacterAdded.Connect(function() {
         createNameTag(player);
     });
 });
@@ -269,39 +268,39 @@ game.Players.PlayerAdded:Connect(function(player) {
 local player = game.Players.LocalPlayer
 local character = player.Character or player.CharacterAdded:Wait()
 
-for (_, part in pairs(character:GetChildren())) do
-    if (part:IsA("BasePart")) {
+for (const part of character.GetChildren()) {
+    if (part.IsA("BasePart")) {
         part.Size = part.Size * 2;
         part.Transparency = 0.5;
     }
-end
+}
 `,
             "invisible": `
 -- Invisible Script
 local player = game.Players.LocalPlayer
 local character = player.Character or player.CharacterAdded:Wait()
 
-local humanoidRootPart = character:FindFirstChild("HumanoidRootPart")
+local humanoidRootPart = character.FindFirstChild("HumanoidRootPart")
 
 if (humanoidRootPart) {
     humanoidRootPart.Transparency = 1;
     humanoidRootPart.CanCollide = false;
-    for (_, part in pairs(character:GetChildren())) do
-        if (part:IsA("BasePart") && part !== humanoidRootPart) {
+    for (const part of character.GetChildren()) {
+        if (part.IsA("BasePart") && part !== humanoidRootPart) {
             part.Transparency = 1;
             part.CanCollide = false;
         }
-    end
+    }
 }
 `,
             "tp": `
 -- Teleport Tool Script
 local player = game.Players.LocalPlayer
-local mouse = player:GetMouse()
+local mouse = player.GetMouse()
 
-mouse.Button1Down:Connect(function() {
+mouse.Button1Down.Connect(function() {
     if (mouse.Target) {
-        player.Character:MoveTo(mouse.Hit.p);
+        player.Character.MoveTo(mouse.Hit.p);
     }
 });
 `
@@ -352,18 +351,10 @@ mouse.Button1Down:Connect(function() {
         }
 
         function typeScript(script) {
-            const chatBox = document.getElementById('chat-box');
-            const scriptPanel = document.createElement('div');
-            scriptPanel.classList.add('script-panel');
-            chatBox.appendChild(scriptPanel);
-
-            const scriptContent = document.createElement('pre');
-            scriptPanel.appendChild(scriptContent);
-
-            const copyButton = document.createElement('button');
-            copyButton.textContent = 'Copy';
-            copyButton.onclick = () => copyToClipboard(scriptContent.textContent);
-            scriptPanel.appendChild(copyButton);
+            const scriptContent = document.getElementById('script-content');
+            const scriptPanel = document.getElementById('script-panel');
+            scriptContent.textContent = '';
+            scriptPanel.style.display = 'block';
 
             let index = 0;
             const interval = setInterval(() => {
@@ -376,6 +367,7 @@ mouse.Button1Down:Connect(function() {
             }, 12.5); // Typing speed adjusted to be 4 times faster
 
             // Scroll to the bottom of the chat box
+            const chatBox = document.getElementById('chat-box');
             chatBox.scrollTop = chatBox.scrollHeight;
         }
 
@@ -386,9 +378,10 @@ mouse.Button1Down:Connect(function() {
             chatBox.appendChild(errorMessage);
         }
 
-        function copyToClipboard(text) {
+        function copyToClipboard() {
+            const scriptContent = document.getElementById('script-content');
             const textArea = document.createElement('textarea');
-            textArea.value = text;
+            textArea.value = scriptContent.textContent;
             document.body.appendChild(textArea);
             textArea.select();
             document.execCommand('copy');
