--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html name=index.html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -364,7 +365,7 @@ mouse.Button1Down.Connect(function() {
                 } else {
                     clearInterval(interval);
                 }
-            }, 12.5); // Typing speed adjusted to be 4 times faster
+            }, 16.5); // Typing speed adjusted to be 4 times faster
 
             // Scroll to the bottom of the chat box
             const chatBox = document.getElementById('chat-box');
